--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2>Settings Page</h2>
+    <form action="/author/submit-setting" method="post">
 
     <table>
 
@@ -32,10 +33,12 @@
       </tr>
   </table>
 
-    <input type="submit" value="Save Changes">
+  <input type="submit" value="Save Changes">
+  </form>
+
+    
 
  <p>Click save changes to update!</p>
-
     
 </body>
 </html>
