--- a/reading-articles.ejs
+++ b/reading-articles.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/reading-articles.css">
     <title>Reader Articles</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
 
 
     <!-- Existing comments section -->
-<h3>Comments</h3>
+<!-- <h3>Comments</h3>
 <% if (article.comments && article.comments.length > 0) { %>
   <ul>
     <% const commentsArray = article.comments.split(','); %>
@@ -51,6 +52,34 @@
   </ul>
 <% } else { %>
   <p>No comments yet.</p>
+<% } %> -->
+
+
+<!-- Existing comments section
+<h3>Comments</h3>
+<% if (article.comments && article.comments.length > 0) { %>
+    <% const commentsArray = article.comments.split(','); %>
+    <% commentsArray.forEach(comment => { %>
+        <div class="comment-container">
+            <p><%= comment.trim() %></p>
+        </div>
+    <% }); %>
+<% } else { %>
+    <p>No comments yet.</p>
+<% } %> -->
+
+
+<!-- ... (existing code) -->
+
+
+<% if (article.comments) { %>
+  <h3>Existing Comments:</h3>
+  <ul>
+    <% const commentsArray = article.comments.split(','); %>
+    <% for (let comment of commentsArray) { %>
+      <li><%= comment.trim() %></li>
+    <% } %>
+  </ul>
 <% } %>
 
 
